--- a/webdesign.html
+++ b/webdesign.html
@@ -77,7 +77,7 @@
         <div class="col-md-3">
           <!-- START LOGO -->
           <div class="logo">
-            <a href="../index.html" target = "_blank">
+            <a href="index.html" target = "_blank">
               <img class="img-responsive" src="assets/img/logo/MISLALogoWhiteOrange.png" alt="">
             </a>
           </div>
@@ -97,7 +97,7 @@
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a class="smoth-scroll" href="../index.html" target = "_blank">home</a>
+                  <li class="active"><a class="smoth-scroll" href="index.html">home</a>
                   </li>
                   <li><a class="smoth-scroll" href="/html/chairman-speech.html" target = "_blank">about</a>
                   </li>
@@ -195,27 +195,15 @@
               </div>
             </div>
           </div>
-          <!--
-          <div class="row">
-            <ul class="work">
-              <li class="filter" data-filter="all">business</li>
-              <li class="filter" data-filter=".design">travel</li>
-              <li class="filter" data-filter=".development">Resume</li>
-              <li class="filter" data-filter=".print">Gaming</li>
-            </ul>
-          </div>
-          <div class="work-inner">
-            <div class="row work-post">
-              -->
-          <!-- START SINGLE WORK ITEM -->
+          
           <div class="col-md-4 col-sm-4 mix design video">
             <div class="single-work">
-              <img src="assets/img/work/7.jpg" class="img-responsive" alt="" />
+              <img src="assets/img/uni.png" class="img-responsive" alt="" />
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/rocketstudios/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
-                  <h2>Built by<br/>Caleb Meyers<br/>Age 13</h2>
+                  <a href="http://unitedhands4forall.com/"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <h2>United Hands for all</h2>
                 </div>
               </div>
             </div>
@@ -228,7 +216,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/travel/index.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="#"  target="_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>#1<br/>Travel</h2>
                 </div>
               </div>
@@ -242,7 +230,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/business/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>#2<br/>Business</h2>
                 </div>
               </div>
@@ -256,7 +244,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/nonprofit/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>Built by<br/>Cameron &amp; Jaiden Smith<br/>Ages 14 &amp; 10</h2>
                 </div>
               </div>
@@ -270,7 +258,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/resume/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>#4<br/>resume</h2>
                 </div>
               </div>
@@ -284,7 +272,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/conference/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>#5<br/>Conference</h2>
                 </div>
               </div>
@@ -298,7 +286,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/startup/index.html" target = "_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="#" target = "_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>#6<br/>Startup</h2>
                 </div>
               </div>
@@ -312,7 +300,7 @@
               <div class="work-details">
                 <div class="overlay"></div>
                 <div class="work_info">
-                  <a href="/voluntour/index_youtube.html"  target="_blank"><i class="fa fa-search-plus"></i></a>
+                  <a href="#"  target="_blank"><i class="fa fa-search-plus"></i></a>
                   <h2>Built by<br/>Caleb Meyers<br/>Age 13</h2>
                 </div>
               </div>
@@ -570,7 +558,7 @@
       </div>
       <div class="col-md-3">
         <div class="item-buy text-right">
-          <a href="../html/course-detail.html" target = "_blank" class="item_buy pull-right">Register</a>
+          <a href="html/course-detail.html" target = "_blank" class="item_buy pull-right">Register</a>
           <!-- <a class="smoth-scroll" href="#contact">contact us</a> -->
         </div>
       </div>
