--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
   <div class="header-top-area">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
           <div class="logo">
             <a href="index.html"> <img class="img-responsive" src="assets/img/logo/MISLALogoWhiteOrange.png" alt="" /> </a>
           </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-10">
           <div class="mainmenu">
             <div class="navbar navbar-nobg">
               <div class="navbar-header">
@@ -79,7 +79,7 @@
                   <li><a class="smoth-scroll" href="https://marty.world/services.html" target="_blank">hire us</a></li>
                   <li><a class="smoth-scroll" href="#testimonial">partners</a></li>
                   <li><a class="smoth-scroll" href="#donate">donate</a></li>
-                  <li><a class="smoth-scroll" href="https://marty.world/latest-insights.html" target="_blank">blog</a></li>
+                  <li><a class="smoth-scroll" href="https://marty.world/press.html" target="_blank">blog</a></li>
                   <li><a class="smoth-scroll" href="#contact">contact</a></li>
                 </ul>
               </div>
